# Xouver

./: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  Readme.md  Test.xvr
XNI/: XNI.h
XouverC/: Program.cs  XouverC.csproj  XouverC.sln
XouverC/Compiling/: Compiler.cs  FieldInfo.cs  FunctionInfo.cs  Instructions.cs  VarInfo.cs
XouverC/Exceptions/: InvalidTypeException.cs  UnexpectedTokenException.cs  XException.cs
XouverC/Lexing/: Lexer.cs  Token.cs  TokenType.cs
XouverC/Parsing/: AST.cs  Parser.cs
XouverC/Properties/: launchSettings.json
XouverKit/: CMakeLists.txt  Readme.md  XouverKit.cpp
XouverRT/: CMakeLists.txt  CMakeSettings.json  XNI.h  common.cpp  common.h  instructions.h  logging.h  opcodes.h
XouverRT/class/: classmanager.cpp  classmanager.h  xclass.cpp  xclass.h
XouverRT/class/native/: nativeclasses.h
XouverRT/mapping/: classmap.cpp  classmap.h  functionmap.cpp  functionmap.h
XouverRT/memory/: memory.cpp  memory.h  memorymanager.cpp  memorymanager.h
XouverRT/object/: object.cpp  object.h
XouverRT/runtime/: runtime.cpp  runtime.h  runtimeprocess.cpp  runtimeprocess.h
XouverRT/value/: valuetype.h  xvalue.h
